# AIDK

./: .gitignore  Dockerfile  README.md  RLTestCommands.txt  final_validation_report.txt  index.html  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_regression.py  test_wrapper_strict.py  validate.py  validate_local.sh
env/: baseline.py  openenv_wrapper.py
env/agents/: q_learning_agent.py  qwen_agent.py  random_agent.py
env/core/: actions.py  environment.py  reward.py  state.py
env/grading/: grader.py
env/tasks/: __init__.py  base_task.py  easy.py  extreme.py  hard.py  medium.py
inference/: inference_v15.py  run.py
models/chunks/: bin_ao.txt
server/: app.py
training/: absolute_audit.py  audit_curriculum.py  benchmark.py  colab_train.py  diagnostic_benchmark.py  final_seed_1_trace.py  generate_graph_and_log.py  generate_learning_curve.py  log_collector_v15.py  plot_training_curve.py  test_learning_progress.py  test_reward_hacking.py  train_v15.py  trl_llm_alignment.py
